# Rust

cast/: Cargo.toml  cast.rs
src/task02/: palindrome.rs
src/task03/: fibonacci.rs
